Fixed padding on mobile nav

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -209,7 +209,8 @@ footer h2 {
 }
 
 @media screen and (max-width: 567px) {
-  section {
+  section,
+  nav {
     padding-left: 30px !important;
     padding-right: 30px !important;
   }
